--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,218 @@
-header nav ul {
-    list-style: none;
-    box-sizing: border-box;
-    padding: 0;
+:root{
+    --clr-main: #ff6f00;
+    --clr-white: #ffffff;
+    --clr-gray: #a59595;
+    --clr-red: #ff0000;
+}
+*{
     margin: 0;
-    background-color: rgb(127, 219, 255);
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
-header nav li {
-    display: inline-block;
-    margin-right: 20px; 
-}
-
-header nav a {
-    text-decoration: none;
-    color: #000000; 
-    font-weight: bold;
-    transition: color 0.3s;
-}
-
-header nav a:hover {
-    color: #5100ff; 
-}
-body{
-    background-color: rgb(169, 255, 255);
-}
-
-#product-list, #cart-list {
-    list-style: none;
+h1,h2,h3,h4,p,a,input,textarea,ul{
+    margin: 0;
     padding: 0;
 }
-
-#product-list li, #cart-list li {
-    background-color: #fff;
-    padding: 10px;
-    margin: 5px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+ul{
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
 }
 
-#product-list li:hover, #cart-list li:hover {
-    background-color: #f0f0f0;
+.wrapper{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    background-color: var(--clr-main);
 }
-
-#total {
-    font-weight: bold;
-}
-
-button {
-    background-color: #35c3dc;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #5755be;
-}
-
-.productos {
+aside{
+    padding: 2rem;
+    padding-right: 0;
+    color: var(--clr-white);
+    position: sticky;
+    top: 0;
+    height: 100vh;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
 }
+.logo{
+    font-weight: 4000;
+    font-size: 1.3rem;
+}
+.menu{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.boton-menu{
+    background-color: transparent;
+    border: 0;
+    color: var(--clr-white);
+    font-size: 0.75rem;
+    cursor: pointer;
+    display: flex;
+    gap: 1rem;
+    font-weight: 600;
+    padding: 1rem;
+    font-size: 0.85rem;
+}
+.boton-active{
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    width: 100%;
+    border-top-left-radius:1rem;
+    border-bottom-left-radius:1rem ;
+}
+.boton-carrito{
+    margin-top: 2rem;
+}
+.numerito{
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    padding: 0.15;
+    border-radius: 0.25rem;
+}
+.boton-carrito-active .numerito{
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+}
+.texto-footer{
+    color: azure;
+    font-size: 0.85rem;
+}
+main{
+    background-color: var(--clr-white);
+    margin: 1rem;
+    margin-left: 0;
+    border-radius: 2rem;
+    padding: 3rem;
+}
+.titulo-pricipal{
+    color: var(--clr-main);
+    margin-bottom: 2rem; 
+}
+.contenedor-productos{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+.producto-imagen{
+    max-width: 100%;
+    border-radius: 1rem;
+}
+.producto-detalles{
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+    padding: 0.5rem;
+    border-radius: 1rem;
+    margin-top: -2rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+.producto-titulo{
+    font-size: 1rem;
+}
+.producto-agregar{
+    border: 0;
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    padding: 0.4rem;
+    text-transform: uppercase;
+    border-radius: 2rem;
+    cursor: pointer;
+    transition: backgroung-color 0.2s, color 0.2s;
+}
+.producto-agregar:hover{
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+    border: 2px solid var(--clr-white);
+}
 
-.producto {
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    width: calc(25% - 30px);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+/**carrito**/
+.contenedor-carrito{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem
+    ;
+}
+
+.carrito.vacio{
+    color: var(--clr-main);
+    display: none;
+}
+.carrito-productos{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.carrito-producto{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--clr-gray);
+    color: var(--clr-main);
+    padding: 0.5rem;
+    padding-right:1.5rem ;
+    border-radius: 1rem;
+}
+.carrito-producto-imagen{
+    width: 4rem;
+    border-radius: 1rem;
+}
+.carrito-producto small{
+    font-size: 0.75rem;
+}
+.carrito-producto-eliminar{
+    border: 0;
+    background-color: transparent;
+    color: var(--clr-red);
+    cursor: pointer;
+}
+.carrito-acciones{
+    display: flex;
+    justify-content: space-between;
+}
+.carrito-acciones-vaciar{
+    border: 0;
+    background-color: var(--clr-gray);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: var(--clr-main);
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.carrito-acciones-derecha{
+    display: flex;
+}
+.carrito-acciones-izquierda{
+    display: flex;
+}
+.carrito-acciones-total{
+    border: 0;
+    background-color: var(--clr-gray);
+    padding: 1rem;
+    color: var(--clr-main);
+    text-transform: uppercase;
+    cursor: pointer;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    gap: 1rem;
+}
+.carrito-acciones-comprar{
+    border: 0;
+    background-color: var(--clr-gray);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: var(--clr-main);
+    text-transform: uppercase;
+    cursor: pointer;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+.disabled{
+    display: none;
 }
